patches/new-colon-uninit
Bottom: 50f19f26e4707913fb4df107937f44c81a5b4e21
Top:    9db535f50c6789b999ef6f837b5a0db5c9291c84
Author: scott snyder <sss@karma>
Date:   2021-12-16 12:39:42 -0500

We get a false positive uninitialized variable warning from this source:

struct DbObjectGuard   {
  DbObjectGuard();
};

void allocate(char* ptr)
{
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
}


$ cppcheck x.cc
Checking x.cc ...
x.cc:7:18: error: Uninitialized variable: g [legacyUninitvar]
  DbObjectGuard* g = ::new(ptr) DbObjectGuard();
                 ^

The warning goes away if the `::' before the new is removed.

Try to fix by extending matching to recognize this case.
